--- a/store/css/style.css
+++ b/store/css/style.css
@@ -286,7 +286,7 @@ section{
 }
 
 .home{
-    background: url(../image/banner-bg.jpg) no-repeat;
+    background: url(../image/banner-bg.png) no-repeat;
     background-size: cover;
     background-position: center;
 }
