--- a/store/css/style.css
+++ b/store/css/style.css
@@ -113,10 +113,10 @@ section{
 }
 
 .heading span{
-    font-size: 3rem;
+    font-size: 2rem;
     padding:.5rem 2rem;
     color:var(--black);
-    background: rgb(252, 252, 252);
+    background: rgb(237 235 228 / 29%);
     border:var(--border);
 }
 
@@ -137,7 +137,7 @@ section{
 }
 
 .header .header-1{
-    background:rgb(187, 187, 187);
+    background:rgb(rgb(128 128 128 / 9%));
     padding:1.5rem 9%;
     display: flex;
     align-items: center;
