--- a/store/css/style.css
+++ b/store/css/style.css
@@ -125,8 +125,8 @@ section{
     display:inline-block;
     padding:.9rem 3rem;
     border-radius: .5rem;
-    color:rgb(255, 255, 255);
-    background:var(--green);
+    color: rgb(0 0 0);
+    background: #e6a10ec7;
     font-size: 1.7rem;
     cursor: pointer;
     font-weight: 500;
@@ -335,11 +335,7 @@ section{
     cursor: pointer;
 }
 
-.home{
-    background: url(../image/banner-bg.png) no-repeat;
-    background-size: cover;
-    background-position: center;
-}
+
 
 .home .row{
     display:flex;
@@ -426,7 +422,7 @@ section{
 
 .featured .featured-slider .box .image{
     padding:1rem;
-    background: linear-gradient(15deg, #eee 30%, #d8e0ff3b 30.1%);
+    background: linear-gradient(15deg, rgba(86, 66, 89, 0.962) 30%, #d8e0ff3b 30.1%);
 }
 
 .featured .featured-slider .box:hover .image{
@@ -441,7 +437,7 @@ section{
     border-bottom: var(--border-hover);
     position: absolute;
     top:0; left:0; right: 0;
-    background: #fff;
+    background: rgba(255, 255, 255, 0.332);
     z-index: 1;
     transform: translateY(-105%);
 }
@@ -458,11 +454,11 @@ section{
 
 .featured .featured-slider .box .icons a:hover{
     background:var(--green);
-    color:#fff;
+    color:rgba(255, 255, 255, 0.422);
 }
 
 .featured .featured-slider .box .content{
-    background:rgb(230, 230, 230);
+    background:rgba(46, 12, 61, 0.322);
     padding:1.5rem;
 }
 
@@ -503,114 +499,7 @@ section{
     color:#fff;
 }
 
-.newsletter{
-    background:url(../image/letter-bg.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-}
 
-.newsletter form{
-    max-width: 45rem;
-    margin-left: auto;
-    text-align: center;
-    padding:5rem 0;
-}
-
-.newsletter form h3{
-    font-size: 2.2rem;
-    color:#fff;
-    padding-bottom: .7rem;
-    font-weight: normal;
-}
-
-.newsletter form .box{
-    width: 100%;
-    margin: .7rem 0;
-    padding:1rem 1.2rem;
-    font-size: 1.6rem;
-    color:var(--black);
-    border-radius: .5rem;
-    text-transform: none;
-}
-
-.arrivals .arrivals-slider .box{
-    display: flex;
-    align-items:center;
-    gap:1.5rem;
-    padding:2rem 1rem;
-    border:var(--border);
-    margin:1rem 0;
-}
-
-.arrivals .arrivals-slider .box:hover{
-    border:var(--border-hover);
-}
-
-.arrivals .arrivals-slider .box .image img{
-    height:15rem;
-}
-
-.arrivals .arrivals-slider .box .content h3{
-    font-size: 2rem;
-    color:var(--black);
-}
-
-.arrivals .arrivals-slider .box .content .price{
-    font-size: 2.2rem;
-    color:var(--black);
-    padding-bottom: .5rem;
-}
-
-.arrivals .arrivals-slider .box .content .price span{
-    font-size: 1.5rem;
-    color:var(--light-color);
-    text-decoration: line-through;
-}
-
-.arrivals .arrivals-slider .box .content .stars i{
-    font-size: 1.5rem;
-    color:var(--green);
-}
-
-.arrivals .arrivals-slider .box{
-    display: flex;
-    align-items:center;
-    gap:1.5rem;
-    padding:2rem 1rem;
-    border:var(--border);
-    margin:1rem 0;
-}
-
-.arrivals .arrivals-slider .box:hover{
-    border:var(--border-hover);
-}
-
-.arrivals .arrivals-slider .box .image img{
-    height:15rem;
-}
-
-.arrivals .arrivals-slider .box .content h3{
-    font-size: 2rem;
-    color:var(--black);
-}
-
-.arrivals .arrivals-slider .box .content .price{
-    font-size: 2.2rem;
-    color:var(--black);
-    padding-bottom: .5rem;
-}
-
-.arrivals .arrivals-slider .box .content .price span{
-    font-size: 1.5rem;
-    color:var(--light-color);
-    text-decoration: line-through;
-}
-
-.arrivals .arrivals-slider .box .content .stars i{
-    font-size: 1.5rem;
-    color:var(--green);
-}
 
 .deal{
     background:#ffffff;
