--- a/store/css/style.css
+++ b/store/css/style.css
@@ -43,9 +43,9 @@ html, body {width:100%; height:100%; margin:0; padding:0;}
 html {
     background: 
         radial-gradient(ellipse at center, rgba(0,0,255,0.3) 0%, rgba(0,0,0,0) 70%), /* niebieski */
-        radial-gradient(ellipse at center, rgba(255,0,0,0.3) 0%, rgba(0,0,0,0) 70%), /*czerwony */
-        radial-gradient(ellipse at center, rgba(0,255,0,0.3) 0%, rgba(0,0,0,0) 70%) /*zielony */
-        #c3cbdb;
+        radial-gradient(ellipse at center, rgba(255, 0, 0, 0.463) 0%, rgba(0,0,0,0) 70%), /*czerwony */
+        radial-gradient(ellipse at center, rgba(0, 200, 255, 0.3) 0%, rgba(0,0,0,0) 70%) /*zielony */
+        #f7f6f687;
     background-repeat: 
         no-repeat, 
         no-repeat, 
