--- a/store/css/testikas.css
+++ b/store/css/testikas.css
@@ -16,4 +16,34 @@ nav ul {
 }
 
 
+.steps {
+  background: linear-gradient(360deg, rgba(252,176,69,1) 57%, rgba(255,247,221,0.9979342078628326) 57%, rgba(255,247,221,1) 57%);
+}
 
+.steps .box-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(32rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+  gap: 1.5rem;
+}
+
+.steps .box-container .box {
+  text-align: center;
+  padding: 3rem 2rem;
+}
+
+.steps .box-container .box img {
+  height: 20rem;
+}
+
+.steps .box-container .box h3 {
+  font-size: 2.2rem;
+  padding: 2rem 0;
+}
+
+.steps .box-container .box p {
+  font-size: 1.7rem;
+  line-height: 2;
+  padding-bottom: 1rem;
+}
