--- a/store/css/style.css
+++ b/store/css/style.css
@@ -169,7 +169,7 @@ section{
 }
 
 .header .header-2{
-    background:var(--green);
+    background:rgb(252 176 69);
 }
 
 .header .header-2 .navbar{
