--- a/store/css/testikas.css
+++ b/store/css/testikas.css
@@ -16,7 +16,7 @@ nav ul {
 
 
 .steps {
-  background: linear-gradient(360deg, #E588A3 57%, rgba(255,247,221,0.9979342078628326) 57%, rgba(255,247,221,1) 57%);
+  background: linear-gradient(360deg, #E588A3 20%, rgba(255,247,221,0.9979342078628326) 57%, rgba(255,247,221,1) 57%);
 }
 
 .steps .box-container {
@@ -29,7 +29,6 @@ nav ul {
 
 .steps .box-container .box {
   text-align: center;
-  padding: 3rem 2rem;
 }
 
 .steps .box-container .box img {
@@ -42,6 +41,36 @@ nav ul {
 }
 
 .steps .box-container .box p {
+  font-size: 1.8rem;
+  line-height: 2;
+  padding-bottom: 1rem;
+}
+
+
+
+.lapi {
+  background: linear-gradient(360deg, #00000000 20%, rgba(255,247,221,0.9979342078628326) 57%, rgba(255,247,221,1) 57%);
+}
+
+.lapi .box-container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(32rem, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+  gap: 1.5rem;
+}
+
+.lapi .box-container .box {
+  text-align: center;
+}
+
+
+.lapi .box-container .box h3 {
+  font-size: 2.7rem;
+  padding: 2rem 0;
+}
+
+.lapi .box-container .box p {
   font-size: 1.8rem;
   line-height: 2;
   padding-bottom: 1rem;
