--- a/chat/bubble.css
+++ b/chat/bubble.css
@@ -1,6 +1,15 @@
 html {
   height: 100%;
   height: -webkit-fill-available;
+  overflow: hidden;
+  background-image:
+  /*     radial-gradient(ellipse at center, #2883b6 0%, #084688 100%), */ radial-gradient(
+      ellipse at bottom left,
+      rgba(104, 128, 138, 0.4) 10%,
+      rgba(138, 114, 76, 0) 40%
+    ),
+    linear-gradient(to bottom, rgba(57, 173, 219, 0.25), rgba(42, 60, 87, 0.4)),
+    linear-gradient(135deg, #670d10, #092756);
 }
 body {
   width: 100vw;
@@ -22,11 +31,18 @@ body {
 
   position: relative;
   z-index: 10;
+  max-height: 100%;
+  height: -webkit-fill-available;
+  height: 100vh;
+  overflow: hidden;
 }
 #story {
-  overflow-y: auto;
+  overflow-y: scroll;
   overflow-x: hidden;
-  height: 100%;
+  height: 65%;
+  position: fixed;
+  top: 15%;
+  width: 100vw;
 }
 .main {
   position: relative;
@@ -178,8 +194,10 @@ body {
 }
 
 .head {
-  height: 60px;
-  width: 100%;
+  height: 15%;
+  position: fixed;
+  top: 0;
+  width: 100vw;
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
   box-shadow: 2px 17px 43px -3px rgba(3, 3, 3, 0.34);
@@ -207,10 +225,11 @@ body {
   margin: 20px auto;
 }
 .foot {
-  height: 180px;
-  width: 100%;
+  height: 20%;
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
   text-align: center;
-  position: relative;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   box-shadow: 2px -9px 43px -3px rgba(3, 3, 3, 0.34);
