--- a/ebook/bubble.css
+++ b/ebook/bubble.css
@@ -225,7 +225,7 @@ body {
 }
 .foot {
   height: 20%;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100vw;
   text-align: center;
